FixOverflowCart

--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -2,6 +2,7 @@
 
 .cart-container{
     margin-top: 20vh;
+    overflow: hidden;
 }
 
 .hr-line1{
